--- a/api/static/web-components/css/component.css
+++ b/api/static/web-components/css/component.css
@@ -45,14 +45,13 @@ body {
 .component-navbar>.component-overflow {
     width: 340px;
     float: right;
-    overflow: none;
     position: fixed;
     top: 0;
-    height: 100vh;
+    height: 100%;
     box-sizing: border-box;
     transition: all 0.3s ease;
     z-index: 1001;
-    background: #48b0f7;
+    background: #fff;
 }
 
 
@@ -69,16 +68,19 @@ body {
 
 .json {
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
     padding: 10px;
     float: left;
     display: inline-block;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .json>li {
-    display: inline-block;
+    display: block;
     float: left;
-    width: 50%;
+    width: 100%;
 }
 
 .json>li>a {
@@ -88,22 +90,22 @@ body {
     width: 100%;
     border-bottom: 1px solid rgba(182, 176, 200, 0.2);
     text-decoration: none;
-    color: #fff;
+    color: #111;
     opacity: 0.7;
-    font-weight: 600;
+    font-weight: 400;
     box-sizing: border-box;
-    text-align: center;
+    text-align: left;
 }
 
 .json>li>a:hover {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.05);
     opacity: 1;
 }
 
 .json>li>a>.glyphicon {
-    margin-bottom: 20px;
+    margin-right: 20px;
     display: block;
-    clear: both;
+    float: left;
     font-size: 24px;
 }
 
